--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 :root{
-  --color1:#050C2B;
+  --color1:#283cf5;
   /* --color1:#1c2964; */
   /* --color1:#bb9108;; */
 --golden-color:#bb9108;
