--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 :root{
   --color1:#283cf5;
+  --text-color: rgb(104, 104, 104);
   /* --color1:#1c2964; */
   /* --color1:#bb9108;; */
 --golden-color:#bb9108;
@@ -18,31 +19,91 @@ body{
   text-transform: capitalize !important;
 }
 .span-head{
-  font-size: 12px;
+  font-size: 14px;
   color: white;
 }
-.navbar{  top: 50px;
+.navbar{  
+  top: 60px;
   z-index: 100;
+  
   position: absolute !important;
   /* opacity: 0.9; */
-  background-color:#050c2b1d !important;
+  background-color:#0000000a !important;
+
 }
 /* NAVBAR */
 .top{
+  border-bottom: 0.01px solid rgba(255, 255, 255, 0.17);
   z-index: 111;
 }
+.text-col{
+  color: rgb(235, 235, 235) !important;
+}
+.colb{
+color: rgb(104, 104, 104) !important;
+font-weight: 400 !important;
+}
 .fixtop{
-  transition: 0.9s ease-in-out !important;
-  background-color: var(--color1) !important;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px !important;
+  transition: 0.4s ease-in-out !important;
+  background-color: white !important;
+  /* background-color: var(--color1) !important; */
   position: fixed !important;
   top: 0px !important;
+  height: 75px;
   z-index: 11111;
 }
 
+.btn3 {
+  
+  border: none !important;
+font-size: 14px;
+text-transform: uppercase;
+font-weight: 500;
+
+transition: 0.4s ease-in-out !important;
+  position: relative;
+}
+.icon-hover{
+  color:transparent !important;
+  position: absolute;
+  width: 100%;
+  height: 0% !important;
+  bottom: 0%;
+  transition: 0.4s ease-in-out !important;
+background-color:var(--color1);
+ font-size: 24px !important;
+  z-index: 111;
+  padding-top: 6px;
+  /* padding-top: 20px !important; */
+  left: 0px;
+  border: none !important;
+  /* padding-top: 12px; */
+
+}
+
+.dropdown-large {
+  /* padding: 250px 0px !important; */
+  position: absolute !important;
+  width: 94vw !important;
+  
+transform: translateX(-43%);
+}
+.btn3:hover .icon-hover{
+  transition: 0.4s ease-in-out !important;
+
+  background-color: var(--color1) !important;
+  width: 100% !important;
+  height: 100% !important;
+  color: white !important;
+}
+.colb2{
+  color: white !important;
+}
 .nav-item>.nav-link{
 color:white;
 font-size: 15px;
-font-weight: 500;
+font-weight: 400;
 letter-spacing: 0.1px;
 padding: 0px 10px !important;
 }
@@ -54,6 +115,19 @@ padding: 0px 10px !important;
 }
 .nav-item.dropdown:hover .dropdown-menu {
   display: block;
+  transition: 0.5s ease-in-out !important;
+
+  }
+  .dropdown-menu{
+   
+    transition: 0.6s ease-in-out !important;
+    padding: 10px !important;
+    /* background-color:#283cf5 !important; */
+  }
+  .dropdown-item{
+    font-size: 14px;
+    color: var(--text-color) !important;
+    /* border-bottom: 1px solid var(--text-color) !important; */
   }
 /* NAVBAR */
 
@@ -63,6 +137,15 @@ padding: 0px 10px !important;
   border: none;
 
   border-bottom: 1px solid #ffffff !important;
+}
+.ddd{
+  font-size: 12px;
+  color: var(--text-color) !important;
+}
+.selc1e{
+  font-size: 14px;
+  border: none !important;
+  border-bottom: 1px solid var(--text-color) !important;
 }
 @media (max-width:992px) {
   .carousel-item>div>img{
@@ -122,14 +205,40 @@ color: var(--color1) !important;
         bottom: -250px !important;
      }
 }
-.slider-img{
+.slider-img1:hover{
+  transform: scale(1.09) !important;
+}
+.slider-img2:hover{
+  transform: scale(1.09) !important;
+}
+.slider-img1{
+  transform: scale(1) !important;
+  transition: 0.9s ease-in-out !important;
+  background-position: center !important;
+  object-fit: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed !important;
+  height: 110vh !important;
+    background-image: url("assets/banner\ \(3\)\ \(1\).png");
     
+}
+.slider-img2{
+  transform: scale(1) !important;
+
+  background-position: center !important;
+  object-fit: cover;
+  transition: 0.9s ease-in-out !important;
+
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 110vh !important;
+    background-image: url("assets/17268573083.png");
     
     background-attachment: fixed !important;
 }
 .main1{
-    position: absolute;
-    bottom: -60px;
+margin: 50px 0px;
 z-index: 222;
 }
 .card{
@@ -412,4 +521,29 @@ height: 100%;
 }
 .appdiv:hover{
   color: white !important;
+}
+
+/* */
+.back{
+  transform: scale(0.99.9) !important;
+  transition: 0.9s ease-in-out !important;
+  background-position: center !important;
+  object-fit: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed !important;
+  height: 90vh;
+background-image: url("assets/banner\ \(5\).png");
+}
+
+.back1{
+  transform: scale(0.99.9) !important;
+  transition: 0.9s ease-in-out !important;
+  background-position: center !important;
+  object-fit: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed !important;
+  height: 90vh;
+background-image: url("assets/banner\ \(6\).png");
 }
