--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 :root{
-  --color1:#283cf5;
+  --color1:#6095FF;
+
+  /* --color1:#283cf5; */
   --text-color: rgb(104, 104, 104);
+  --text-color1:rgb(124, 124, 124);
   /* --color1:#1c2964; */
   /* --color1:#bb9108;; */
 --golden-color:#bb9108;
@@ -10,7 +13,13 @@
 
  --font-family: "Poppins", serif;
 }
-
+.col-text{
+  color: var(--text-color1) !important;
+  font-weight: 400 !important;
+}
+.col-org{
+  color: var(--color1) !important;
+}
 body{
 
  font-family: var(--font-family) !important;
@@ -238,58 +247,79 @@ color: var(--color1) !important;
     background-attachment: fixed !important;
 }
 .main1{
-margin: 50px 0px;
-z-index: 222;
-}
-.card{
-  width: 100%;
-  display: flex ;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-    height: 140px;
-   transition: 0.6s ease-in-out !important;
-    background-color: var(--color1) !important;
-}
-.card-body>a{
-    color: white !important;
+/* margin: 50px 0px; */
 
 }
+
+.cardi{
+
+  margin-left: 14px;
+  font-size: 20px !important;
+padding: 10px;
+text-align: center;
+color: white;
+background-color:var(--color1) !important;
+border-radius: 50%;
+margin-top: -55px !important; 
+
+  box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
+
+}
+.dfd{
+  position: relative !important;
+  z-index: 22 !important;
+  border-radius: 10px !important;
+
+}
+
 .card-text{
-  transition: 0.6s ease-in-out !important;
-  display: none ;
-  /* color: red !important; */
+  font-weight: 400;
+  color: var(--text-color);
+  font-size: 15px;
 }
-.card:hover .card-text{
-  transition: 0.6s ease-in-out !important;
-  display: block !important;
+
+.carhover{
+  border-radius: 10px !important;
+ 
+  transition: 0.5s ease!important;
+  width: 5% !important;
+background-color:var(--color1) !important;
+  position: absolute !important;
+  height: 5%;
+  left: 6%;
+  top: 0px;
+z-index: -1;
+padding: 10px;
+border-radius :50%; 
+
+
 }
-.card:hover{
-  
-  height: 250px !important;
-  z-index: 22;
-    color: var(--color1) !important;
-    background-color: white !important;
+.car:hover .dfd{
+  color: white !important;
 }
-.card:hover .card-body>a{
-    color: var(--color1) !important;
+.car:hover .card-body>h5{
+  color: white !important;
 }
-.card:hover .card-body>a>div>i{
-    transform: rotateY(180deg);
-    background-color: var(--color1);
-    color: white !important;
+.car:hover .card-body>.card-text{
+  color: white !important;
 }
-.card-body>a>div>i{
-    background-color: white;
-    color: var(--color1);
-    padding: 10px;
-    border-radius: 20px;
-    transition: 0.6s ease-in-out !important;
-    padding-right: 10px;
+.car:hover .dfd>i{
+  color: var(--color1);
+  background-color: white !important;
 }
-.card:hover .cret{
-  display: none !important;
+.car:hover .carhover{
+  /* opacity: 1; */
+  border-radius: 0%;
+
+  height: 100% !important;
+  width: 100% !important;
+  left: 0px;
+  background-color: var(--color1) !important;
 }
+
+
+/*  */
+
 .card:hover .crett1{
   color: var(--color1) !important;
 display: block !important;
@@ -339,8 +369,13 @@ z-index: 22 !important;
     background-size: cover;
     height: 55vh !important;
 }
+.i4{
+  object-fit: cover;
+  background-size: cover;
+  height: 500px !important;
+}
 .ex-page{
-    background-image: url(assets/counter-bg.jpg);
+    background-image: url(assets/ff.png);
     height: 60vh;
     background-attachment: fixed;
     background-size: cover;
@@ -400,7 +435,7 @@ width: 100%;
     height: 385px;
 }
 .bg{
-    background-color: var(--color1);
+    /* background-color: var(--color1); */
 }
 
 .br1{
@@ -546,4 +581,16 @@ background-image: url("assets/banner\ \(5\).png");
   background-attachment: fixed !important;
   height: 90vh;
 background-image: url("assets/banner\ \(6\).png");
+}
+
+.gty{
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 18px 50px -10px;
+  background-color: white;
+}
+.gty>div>i , .gty>div>h2,.gty>div>span{
+  /* font-weight: 500; */
+  color: var(--color1) !important;
+}
+.gty>div>span{
+  font-weight: 600;
 }
