--- a/style.css
+++ b/style.css
@@ -31,8 +31,32 @@ body{
   font-size: 14px;
   color: white;
 }
+.navhover{
+  position: absolute !important;
+  top: 0px;
+  width: 0%;
+  z-index: 22 !important; 
+  bottom: 0px;
+
+  transition: 0.5s ease-in-out !important;
+
+  border-bottom: 1px solid var(--golden-color);
+}
+.nav-item:hover .navhover{
+
+  width: 100% !important;
+}
+.nav-item{
+  position: relative;
+  
+}
+@media (max-width:992px) {
+  .navbar{
+    top: 10px !important;
+  }
+}
 .navbar{  
-  top: 60px;
+  top: 60px  ;
   z-index: 100;
   
   position: absolute !important;
@@ -59,8 +83,9 @@ color: rgb(104, 104, 104) !important;
 font-weight: 400 !important;
 }
 .io{
-  height: 100vh;
-  position: relative !important;
+  height: calc(100vh - 40vh);
+  
+  position:relative !important;
 }
 
 .io1{
@@ -181,7 +206,7 @@ padding: 0px 10px !important;
   border: none !important;
   border-bottom: 1px solid var(--text-color) !important;
 }
-@media (max-width:992px) {
+
   .carousel-item>div>img{
     top: 0px;
     object-fit: cover;
@@ -191,10 +216,7 @@ padding: 0px 10px !important;
   .top{
     display: none !important;
   }
-  .navbar{
-    top: 5px;
-  }
-}
+  
 
 .btn1{
   background-color:white;
@@ -675,7 +697,7 @@ footer{
   /* height: 100vh !important; */
 }
 .test-bg{
-  height: 90vh;
+  height: calc(90vh - 30vh);
   width: 100%;
   background-image: url("assets/test\ \(1\).png");
   background-size: cover;
@@ -713,9 +735,13 @@ right: 0px;
 }
 @media (max-width:992px) {
   .testi2{
-    display: none !important;
+    object-fit: cover !important;
+    width: 80% !important;
+
   }
   .testi1{
+    object-fit: cover !important;
+
     width: 100% !important;
   }
 }
@@ -727,7 +753,7 @@ right: 0px;
   border-bottom-left-radius:20px;
 
   background-color: var(--color1) !important;
-  clip-path: polygon(0 0, 100% 0%, 75% 100%, 0% 100%);
+clip-path: polygon(0 0, 100% 0%, 87% 100%, 0% 100%);
 }
 @media (max-width:992px) {
   .suc1{
@@ -748,7 +774,7 @@ right: 0px;
 /* suecss */
 
 .divof{
-  border: 2px solid red !important;
+
 padding: 5px 7px;
   border-radius: 14px;
 z-index: 5;
