--- a/style.css
+++ b/style.css
@@ -848,3 +848,27 @@ background-image: url(assets/uss\ \(1\).jpg);
       z-index: -1;
       display: none;
     }
+    .evcol{
+      height: 70vh !important;
+  position: relative;
+    }
+    .ev-col-1{
+border-radius: 30px;
+      height: 400px !important;
+    }
+    .ev-c-1{
+      clip-path: polygon(0 0, 75% 0%, 100% 50%, 100% 100%, 0 100%, 0% 50%);
+      position: absolute;
+    }
+    .ev-c-2{
+      bottom: 0px;
+      right: 20px;
+      position: absolute;
+    }
+    .ev-c-3{
+      position: absolute;
+      
+     
+      clip-path: circle(50% at 50% 50%);
+      background-color: red;
+    }
