--- a/style.css
+++ b/style.css
@@ -887,6 +887,8 @@ border-radius: 30px;
     }
     .offcanvas{
       transition: 0.9s ease-in-out !important;
-      width: 60% !important;
+      width: 75% !important;
     }
-  
+    .offcanvas-body>.navbar-nav>.dropdown{
+      width: auto !important;
+    }
