--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ background-color:var(--color1);
   /* padding: 250px 0px !important; */
   position: absolute !important;
   width: 94vw !important;
-  
+ 
 transform: translateX(-43%);
 }
 .btn3:hover .icon-hover{
@@ -889,6 +889,9 @@ border-radius: 30px;
       transition: 0.9s ease-in-out !important;
       width: 75% !important;
     }
-    .offcanvas-body>.navbar-nav>.dropdown{
-      width: auto !important;
+
+
+    .dropdown-header{
+      font-weight: 500  !important;
+      color: black !important;
     }
