Updated code with new changes

--- a/style.css
+++ b/style.css
@@ -292,7 +292,7 @@ color: var(--color1) !important;
 }
 @media (max-width:992px) {
 .dropdown-header{
-  font-size: 14px !important;
+margin-left: -19px !important;
 }
   /* .carousel-item>div>img{
         background-attachment: fixed !important;
@@ -939,6 +939,8 @@ border-radius: 30px;
 
 
     .dropdown-header{
+text-align: start !important;
+      font-size: 12px !important;
       font-weight: 500  !important;
       color: black !important;
     }
