--- a/style.css
+++ b/style.css
@@ -713,7 +713,7 @@ margin-top: -40px !important;
 .locte{
   margin-top: -5px;
   font-size: 14px;
-  color: white !important;
+  /* color: white !important; */
 }
 .form-control1{
   border-radius: 6px !important;
