Updated code with new changes

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -323,7 +323,7 @@ margin-left: -19px !important;
   background-repeat: no-repeat;
   background-attachment: fixed !important;
   height: 110vh !important;
-    background-image: url("assets/banner\ \(3\)\ \(1\).png");
+    background-image: url("/assets/banner\ \(3\)\ \(1\).png");
     
 }
 .slider-img2{
@@ -336,7 +336,7 @@ margin-left: -19px !important;
   background-size: cover;
   background-repeat: no-repeat;
   height: 110vh !important;
-    background-image: url("assets/17268573083.png");
+    background-image: url("/assets/17268573083.png");
     
     background-attachment: fixed !important;
 }
@@ -482,7 +482,7 @@ z-index: 22 !important;
   padding: 40px 0px !important;
   font-size: 16px;
   background-color: var(--color1);
-    /* background-image: url(assets/ff.png); */
+    /* background-image: url(/assets/ff.png); */
     /* height: calc(80vh - 30vh ); */
     background-attachment: fixed;
     background-size: cover;
@@ -506,26 +506,26 @@ z-index: 22 !important;
 
 .course-img1{
   border-radius: 14px;
-    background-image: url(assets/cir\ \(1\).jpg);
+    background-image: url(/assets/cir\ \(1\).jpg);
    object-position: center;
     object-fit: cover;
     background-position: center !important;
     background-size: cover;
 }
 .course-img2{
-    background-image: url(assets/cir\ \(2\).jpg);
+    background-image: url(/assets/cir\ \(2\).jpg);
     background-position: center !important;
    
     object-fit: cover;
     background-size: cover;
 }.course-img3{
-    background-image: url(assets/cir\ \(4\).jpg);
+    background-image: url(/assets/cir\ \(4\).jpg);
     background-position: center !important;
    
     object-fit: cover;
     background-size: cover;
 }.course-img4{
-    background-image: url(assets/cir\ \(5\).jpg);
+    background-image: url(/assets/cir\ \(5\).jpg);
     background-position: center !important;
   
     object-fit: cover;
@@ -587,7 +587,7 @@ background-size: cover;
 object-fit: cover;
 background-position: center;
     height: 80vh;
-    background-image: url(assets/counter-bg.jpg);
+    background-image: url(/assets/counter-bg.jpg);
 }
 
 .adbook{
@@ -675,7 +675,7 @@ height: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed !important;
   height: 90vh;
-background-image: url("assets/banner\ \(5\).png");
+background-image: url("/assets/banner\ \(5\).png");
 }
 
 .back1{
@@ -687,7 +687,7 @@ background-image: url("assets/banner\ \(5\).png");
   background-repeat: no-repeat;
   background-attachment: fixed !important;
   height: 90vh;
-background-image: url("assets/banner\ \(6\).png");
+background-image: url("/assets/banner\ \(6\).png");
 }
 
 .gty>div>span{
@@ -707,7 +707,7 @@ margin-top: -40px !important;
 .contact-page{
   background-position: center;
   /* height: 80vh; */
-  background-image: url(assets/contact.png);
+  background-image: url(/assets/contact.png);
 }
 
 .locte{
@@ -757,7 +757,7 @@ footer>div>div>div>h5{
 .test-bg{
   /* height: calc(90vh - 30vh); */
   width: 100%;
-  background-image: url("assets/test\ \(1\).png");
+  background-image: url("/assets/test\ \(1\).png");
   background-size: cover;
   object-fit: cover;
   position: relative !important;
@@ -864,7 +864,7 @@ z-index: 5;
 
 .whycol-1{
   height: 100vh;
-  background-image: url(assets/uss\ \(3\).jpg);
+  background-image: url(/assets/uss\ \(3\).jpg);
 object-fit: cover;
 background-size: cover;
 }
@@ -881,12 +881,12 @@ background-size: cover;
 position: relative;
 }
 .us1{
-background-image: url(assets/uss\ \(1\).jpg);
+background-image: url(/assets/uss\ \(1\).jpg);
 }
 .us2{
-  background-image: url(assets/uss\ \(3\).jpg) !important;
+  background-image: url(/assets/uss\ \(3\).jpg) !important;
   }.us3{
-    background-image: url(assets/uss\ \(4\).jpg)
+    background-image: url(/assets/uss\ \(4\).jpg)
     }
     .ushover{
       transition: 0.9s ease !important;
