--- a/CSS/style.css
+++ b/CSS/style.css
@@ -68,6 +68,10 @@ top: 0px !important;
   .navbar{
     top: 10px !important;
   }
+  .frameworkpic{
+    display: none !important;
+    height: 100% !important;
+  }
 }
 .navbar{  
   top: 60px  ;
@@ -736,6 +740,10 @@ outline: none !important;
 }
 .map{
   height: 80vh !important;
+}
+footer>footer{
+  background-color: #313131 !important;
+
 }
 footer{
   background-color: #313131 !important;
