--- a/CSS/style.css
+++ b/CSS/style.css
@@ -692,7 +692,7 @@ background-image: url("../assets/banner_5.png");
   background-repeat: no-repeat;
   background-attachment: fixed !important;
   height: 90vh;
-background-image: url("/assets/banner_6.png");
+background-image: url("assets/banner_6.png");
 }
 
 .gty>div>span{
@@ -712,7 +712,7 @@ margin-top: -40px !important;
 .contact-page{
   background-position: center;
   /* height: 80vh; */
-  background-image: url("/assets/contact.png") !important  ;
+  background-image: url("assets/contact.png") !important  ;
 }
 
 .locte{
@@ -772,9 +772,10 @@ footer>div>div>div>h5{
 
 }
 .whycol-11{
-  height: 100vh;
+  height: 100vh !important;
   background-position: center;
-  background-image: url("/assets/evulation_4.png") !important;
+  background-image: url("../assets/evulation_4.png") !important;
+  /* background-image: url("/assets/evulation_4.png") !important; */
 object-fit: cover;
 background-size: cover;
 }
@@ -876,7 +877,7 @@ z-index: 5;
 
 .whycol-1{
   height: 100vh;
-  background-image: url("../assets/uss_1.jpg");
+  background-image: url("/assets/uss_1.jpg") !important;
 object-fit: cover;
 background-size: cover;
 }
@@ -893,12 +894,12 @@ background-size: cover;
 position: relative;
 }
 .us1{
-background-image: url("../assets/uss_2.jpg");
+background-image: url("../assets/uss_2.jpg") !important;
 }
 .us2{
   background-image: url("../assets/uss_3.jpg") !important;
   }.us3{
-    background-image: url("../assets/uss_4.jpg")
+    background-image: url("../assets/uss_4.jpg") !important;
     }
     .ushover{
       transition: 0.9s ease !important;
