--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,6 +15,7 @@
 }
 
 .color-2{
+
   color: var(--color2) !important;
 }
 button{
@@ -692,7 +693,7 @@ background-image: url("../assets/banner_5.png");
   background-repeat: no-repeat;
   background-attachment: fixed !important;
   height: 90vh;
-background-image: url("assets/banner_6.png");
+background-image: url("/assets/banner_6.png");
 }
 
 .gty>div>span{
@@ -1031,3 +1032,12 @@ position: relative !important;
       width: 100% !important;
       border-radius: 0% !important;
     }
+
+    .card-text{
+      text-align:justify  !important ;
+    }
+    .text-justify1{
+      text-align: justify !important;
+
+    }
+    
