--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1027,17 +1027,8 @@ footer>div>div>div>h5 {
   position: relative;
 }
 
-.us1 {
-  background-image: url("../assets/uss_2.jpg") !important;
-}
 
-.us2 {
-  background-image: url("../assets/uss_3.jpg") !important;
-}
 
-.us3 {
-  background-image: url("../assets/uss_4.jpg") !important;
-}
 
 .ushover {
   transition: 0.9s ease !important;
@@ -1069,7 +1060,10 @@ footer>div>div>div>h5 {
   z-index: -1;
   display: none;
 }
-
+.grttt>div>img{
+  object-fit: cover;
+  
+}
 .evcol {
   height: 70vh !important;
   position: relative;
@@ -1225,4 +1219,171 @@ fill: white !important;
   bottom: 0px;
   left: 0%;
 position: absolute; 
+}
+
+.aboutback{
+
+  transform: scale(1) !important;
+transition: 0.9s ease-in-out !important;
+background-position: center !important;
+object-fit: cover !important;
+box-sizing: border-box !important;
+background-size: cover !important;
+background-repeat: no-repeat;
+background-attachment: fixed !important;
+height: 70vh;
+z-index: -1;
+}
+.card-text {
+  text-transform: lowercase;
+  color: rgb(177, 177, 177) !important;
+}
+
+.whycol-1{
+  height: 100vh !important;
+  background-position: center;
+  /* background-image: url("assets/evulation_4.png") !important; */
+  /* background-image: url("../cybron1/assets/evulation_4.png"); */
+  /* background-image: url("/assets/evulation_4.png") !important; */
+object-fit: cover;
+background-size: cover;
+}
+   @keyframes progressAnimation {
+      from {
+        width: 0%;
+      }
+      to {
+        width: var(--progress-value);
+      }
+    }
+
+    .progress {
+      background-color: #e0e0e0;;
+      height: 10px;
+      width: 95%;
+    
+      border-radius: 5px;
+      overflow: hidden;
+    }
+
+ 
+    .progress-bar {
+      height: 100%;
+         border-radius: 5px;
+         background-color:#6095FF !important;
+      animation: progressAnimation 12s ease-out infinite;
+    }
+
+    
+
+
+    
+.card-body-1 {
+  padding: 15px;
+
+    position: relative;
+    z-index: 22 !important;
+}   
+.dekop{
+    color: white;
+    z-index: -1 !important;
+    position: absolute;
+    background-color: #6095ff;
+    top: 0px;
+    height: 100%;
+width: 0%;
+right: 0% !important;
+transition: 0.9s ease-in-out !important;
+}
+.card-body-1:hover .dekop{
+    left: 0% !important;
+color: white !important;
+    width: 100%;
+
+}
+.card-text-1,.card-title-1,.fa-shapes {
+    
+transition: 0.9s ease-in-out !important;
+
+}
+.card-body-1:hover .card-text-1,.card-body-1:hover .card-title-1 ,.card-body-1:hover .fa-shapes {
+    color: white !important;
+}
+.card-1{
+    margin: 10px 0px;
+    box-shadow: none;
+    border: none !important;
+}
+.card-body-1{
+    border-radius: 5%;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+}
+/*  */
+
+.card-body-2 {
+    
+  position: relative;
+  z-index: 22 !important;
+
+}   
+.dekop-2{
+  color: white;
+  z-index: -1 !important;
+  position: absolute;
+  background-color: #6095ff;
+  top: 23px;
+  height: 5%;
+width: 1%;
+left: 3%;
+transition: 0.9s ease-in-out !important;
+}
+.card-body-2:hover .dekop-2{
+  height: 100%;
+  top: 0%;
+  left: 0%;
+color: white !important;
+  width: 100%;
+  border-radius: 2%;
+}
+.card-text-2,.card-title,.fa-solid {
+  
+transition: 0.9s ease-in-out !important;
+
+}
+.btn3{
+  
+  transition: 0.5s ease-in-out !important;
+  
+  }
+.card-body-2:hover .card-text-2,.card-body-2:hover .card-title ,.card-body-2:hover .fa-solid {
+  color: white !important;
+}
+.card-body-2:hover .fa-solid{
+  color: #6095ff !important;
+  background-color: white !important;
+}
+.fa-solid{
+
+  transition: 0.9s ease-in-out !important;
+}
+.card-2{
+  margin: 10px 0px;
+  box-shadow: none;
+  border: none !important;
+}
+.card-body-2{
+  transition: 0.9s ease-in-out !important;
+
+  border-radius: 2%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px !important; 
+}
+.ft{
+  transition: 0.9s ease-in-out !important;
+font-size: 14px !important;
+font-weight: 600;
+border-radius: 10% !important;
+}
+.card-body-2:hover .ft{
+  background-color: white !important;
+  color: #6095ff !important;
 }
