--- a/CSS/style.css
+++ b/CSS/style.css
@@ -367,7 +367,9 @@ li>.dropdown-item:hover {
     bottom: -250px !important;
   }
 }
-
+a:hover{
+  cursor: grabbing !important;
+}
 .carousel-item {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px !important;
 }
